# Local-RAG-Agent

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
src/: bot_agent.py  config.py  rag_engine.py
